# mod_chxj

./: .cvsignore  AUTHORS  CHECKLIST  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  TODO  buildconf.sh  config.status  configure  configure.ac  install-sh
debian/: README.Debian  changelog  chxj.load  control  copyright  files  rules
debian-sarge/: README.Debian  changelog  control  copyright  files  rules
doc/: Makefile  modchxj.html  modchxj.sdoc
etc/: device_data.xml  emoji.xml
include/: chxj_apache.h  chxj_apply_convrule.h  chxj_buffered_write.h  chxj_calc_ecc.h  chxj_chtml10.h  chxj_chtml20.h  chxj_chtml30.h  chxj_chtml40.h  chxj_chtml50.h  chxj_cookie.h  chxj_dbm.h  chxj_dump.h  chxj_emoji.h  chxj_encoding.h  chxj_hdml.h  chxj_img_conv.h  chxj_img_conv_format.h  chxj_jhtml.h  chxj_jreserved_tag.h  chxj_jxhtml.h  chxj_load_device_data.h  chxj_load_emoji_data.h  chxj_memcache.h  chxj_mysql.h  chxj_preg_replace.h  chxj_qr_code.h  chxj_serf.h  chxj_specified_device.h  chxj_str_util.h  chxj_tag_util.h  chxj_url_encode.h  chxj_xhtml_mobile_1_0.h  config.h  config.h.in  mod_chxj.h  qs_ignore_sp.h  qs_log.h  qs_malloc.h  qs_parse_attr.h  qs_parse_file.h  (+3 more)
java/: build.properties  build.xml
java/src/com/qsdn/filter/: CHXJFilter.java  CHXJRequestWrapper.java
sample_site/: 1.php  2.php  3-1.php  3.php  4-1.php  4-2.php  4-3.php  4-4.php  4.php  d_qrc.php  extend_tag.php  image.php  img.php  index.php  qrcode.php
sample_site/bbs/: bbs.php
sample_site/euc/: .htaccess  all-10-1.php  all-10-10.php  all-10-11.php  all-10-12.php  all-10-13.php  all-10-2.php  all-10-3.php  all-10-4.php  all-10-5.php  all-10-6.php  all-10-7.php  all-10-8.php  all-10-9.php  all-10.php  all-16-1.php  all-16-10.php  all-16-11.php  all-16-12.php  all-16-13.php  all-16-2.php  all-16-3.php  all-16-4.php  all-16-5.php  all-16-6.php  all-16-7.php  all-16-8.php  all-16-9.php  all-16.php  all-2-1.php  all-2-10.php  all-2-11.php  all-2-12.php  all-2-13.php  all-2-2.php  all-2-3.php  all-2-4.php  all-2-5.php  all-2-6.php  all-2-7.php  (+6 more)
sample_site/img/sample/: README
sample_site/sf/: 1.php
sample_site/sjis/: all-10-1.php  all-10-10.php  all-10-11.php  all-10-12.php  all-10-13.php  all-10-2.php  all-10-3.php  all-10-4.php  all-10-5.php  all-10-6.php  all-10-7.php  all-10-8.php  all-10-9.php  all-10.php  all-16-1.php  all-16-10.php  all-16-11.php  all-16-12.php  all-16-13.php  all-16-14.php  all-16-15.php  all-16-16.php  all-16-17.php  all-16-18.php  all-16-19.php  all-16-2.php  all-16-20.php  all-16-21.php  all-16-22.php  all-16-23.php  all-16-24.php  all-16-25.php  all-16-3.php  all-16-4.php  all-16-5.php  all-16-6.php  all-16-7.php  all-16-8.php  all-16-9.php  all-16.php  (+17 more)
sample_site/utf8/: all-10-1.php  all-10-10.php  all-10-11.php  all-10-12.php  all-10-13.php  all-10-2.php  all-10-3.php  all-10-4.php  all-10-5.php  all-10-6.php  all-10-7.php  all-10-8.php  all-10-9.php  all-10.php  all-16-1.php  all-16-10.php  all-16-11.php  all-16-12.php  all-16-13.php  all-16-2.php  all-16-3.php  all-16-4.php  all-16-5.php  all-16-6.php  all-16-7.php  all-16-8.php  all-16-9.php  all-16.php  all-2-1.php  all-2-10.php  all-2-11.php  all-2-12.php  all-2-13.php  all-2-2.php  all-2-3.php  all-2-4.php  all-2-5.php  all-2-6.php  all-2-7.php  all-2-8.php  (+5 more)
src/: .cvsignore  Makefile  Makefile.am  Makefile.in  chxj_apache.c  chxj_apply_convrule.c  chxj_apply_convrule.h  chxj_buffered_write.c  chxj_calc_ecc.c  chxj_chtml10.c  chxj_chtml10.h  chxj_chtml20.c  chxj_chtml20.h  chxj_chtml30.c  chxj_chtml30.h  chxj_chtml40.c  chxj_chtml50.c  chxj_cookie.c  chxj_dbm.c  chxj_dump.c  chxj_dump.h  chxj_emoji.c  chxj_encoding.c  chxj_encoding.h  chxj_hdml.c  chxj_hdml.h  chxj_img_conv.c  chxj_img_conv.h  chxj_img_conv_format.c  chxj_img_conv_format.h  chxj_jhtml.c  chxj_jhtml.h  chxj_jreserved_tag.c  chxj_jxhtml.c  chxj_load_device_data.c  chxj_load_device_data.h  chxj_load_emoji_data.c  chxj_load_emoji_data.h  chxj_memcache.c  chxj_mysql.c  (+32 more)
src/serf/: Makefile  Makefile.in  config.nice  config.status  configure  context.c  serf.h  serf.mak  serf_bucket_types.h  serfmake
src/serf/buckets/: headers_buckets.c  ssl_buckets.c
src/serf/test/: CuTest-README.txt  CuTest.c  CuTest.h  serftestca.pem  test_buckets.c  test_context.c  test_ssl.c  test_util.c
test/chxj_chtml10/: .tb.Makefile.tags  .tb.test_chxj_chtml10.c.tags  Makefile  erer  test_chxj_chtml10  test_chxj_chtml10.c
test/chxj_chtml20/: Makefile  test_chxj_chtml20.c
test/chxj_chtml30/: Makefile  test_chxj_chtml30.c
test/chxj_chtml40/: Makefile  test_chxj_chtml40.c
test/chxj_chtml50/: Makefile  test_chxj_chtml50.c
test/chxj_encoding/: Makefile  test_chxj_encoding.c
test/chxj_hdml/: Makefile  test_chxj_hdml.c
test/chxj_jhtml/: Makefile  test_chxj_jhtml.c
test/chxj_jxhtml/: Makefile  test_chxj_jxhtml.c
test/chxj_str_util/: Makefile  test_chxj_str_util.c
test/chxj_tag_util/: Makefile  test_chxj_tag_util.c
test/chxj_url_encode/: Makefile  test_chxj_url_encode.c
test/chxj_xhtml_mobile_1_0/: Makefile  test_chxj_xhtml_mobile_1_0.c
test/qs_ignore_sp/: Makefile  test_qs_ignore_sp.c
test/qs_parse_attr/: Makefile  test_qs_parse_attr.c
test/qs_parse_string/: Makefile  test_parse_comment_tag.c  test_parse_script_tag.c
test/qs_parse_tag/: Makefile  test_qs_parse_tag.c
